crates/typestate-pipeline/tests/ui/factory_async_without_setter.stderr
error: `async_fn` is only valid alongside `setter = <fn>`
 --> tests/ui/factory_async_without_setter.rs:5:5
  |
5 |     #[field(required, async_fn)]
  |     ^
